crates/cli/tests/snapshots/deactivate_test__deactivate__empty_output_if_not_activated-3.snap
---
source: crates/cli/tests/deactivate_test.rs
expression: "get_deactivate_output(&assert, &sandbox)"
---
