crates/cli/tests/snapshots/deactivate_test__deactivate__resets_path_between_markers-11.snap
---
source: crates/cli/tests/deactivate_test.rs
expression: "get_deactivate_output(&assert, &sandbox)"
---
unset PROTO_HOME;
unset KEY1;
unset KEY2;
unalias pn;
unalias yn;
export PATH="/usr/bin:/bin";
unset _PROTO_ACTIVATED_ENV;
unset _PROTO_ACTIVATED_ALIASES;
unset _PROTO_ACTIVATED_PATH;
