crates/cli/tests/snapshots/deactivate_test__deactivate__resets_path_between_markers-12.snap
---
source: crates/cli/tests/deactivate_test.rs
expression: "get_deactivate_output(&assert, &sandbox)"
---
del $PROTO_HOME
del $KEY1
del $KEY2
del aliases["pn"]
del aliases["yn"]
$PATH = [f"/usr/bin", f"/bin"]
del $_PROTO_ACTIVATED_ENV
del $_PROTO_ACTIVATED_ALIASES
del $_PROTO_ACTIVATED_PATH
