crates/cli/tests/snapshots/deactivate_test__deactivate__resets_path_between_markers-13.snap
---
source: crates/cli/tests/deactivate_test.rs
expression: "get_deactivate_output(&assert, &sandbox)"
---
chpwd_functions=(${chpwd_functions:#proto_activate})
precmd_functions=(${precmd_functions:#proto_activate})
unset -f proto_activate;
unset -f proto_deactivate;
unset PROTO_HOME;
unset KEY1;
unset KEY2;
unalias pn;
unalias yn;
export PATH="/usr/bin:/bin";
unset _PROTO_ACTIVATED_ENV;
unset _PROTO_ACTIVATED_ALIASES;
unset _PROTO_ACTIVATED_PATH;
