crates/cli/tests/snapshots/deactivate_test__deactivate__resets_path_between_markers-4.snap
---
source: crates/cli/tests/deactivate_test.rs
expression: "get_deactivate_output(&assert, &sandbox)"
---
unset-env PROTO_HOME;
unset-env KEY1;
unset-env KEY2;
try { edit:del-vars ['pn~'] } catch _ { }
try { edit:del-vars ['yn~'] } catch _ { }
set paths = ['/usr/bin' '/bin'];
unset-env _PROTO_ACTIVATED_ENV;
unset-env _PROTO_ACTIVATED_ALIASES;
unset-env _PROTO_ACTIVATED_PATH;
