crates/cli/tests/snapshots/deactivate_test__deactivate__resets_path_between_markers-6.snap
---
source: crates/cli/tests/deactivate_test.rs
expression: "get_deactivate_output(&assert, &sandbox)"
---
drop PROTO_HOME
drop KEY1
drop KEY2
unalias pn
unalias yn
export PATH = "/usr/bin:/bin"
drop _PROTO_ACTIVATED_ENV
drop _PROTO_ACTIVATED_ALIASES
drop _PROTO_ACTIVATED_PATH
