crates/cli/tests/snapshots/deactivate_test__deactivate__resets_path_between_markers-7.snap
---
source: crates/cli/tests/deactivate_test.rs
expression: "get_deactivate_output(&assert, &sandbox)"
---
!event onPrompt proto_activate_on_prompt
!function proto_activate;
!function proto_deactivate;
unset PROTO_HOME;
unset KEY1;
unset KEY2;
!alias pn;
!alias yn;
$ENV.PATH="/usr/bin:/bin"
unset _PROTO_ACTIVATED_ENV;
unset _PROTO_ACTIVATED_ALIASES;
unset _PROTO_ACTIVATED_PATH;
